Polish tests
See gh-27248